src/components/Hero/hero.module.css
.hero {
  position: relative;
  padding-bottom: 1rem;
  border-bottom: 1px solid var(--rule);
  margin-bottom: 1rem;

  > :nth-child(n) {
    max-width: 40rem;
  }

  > h4:nth-child(2) {
    margin-top: 0.75rem;
    font-style: italic;
  }

  > a:nth-child(n) {
    margin-top: 0.75rem;

    > h2 {
      color: var(--grey);
      font-weight: 400;
      font-size: 0.875rem;
      font-family: var(--sans);
      text-decoration: underline;
    }
  }
}

